# vision_lane_detection

./: CMakeLists.txt  package.xml  readme.md
cmake/: compiler-flags.cmake  gflags.cmake  glog.cmake  gtest.cmake  lint.cmake  matio.cmake  opencv.cmake  protobuf.cmake  segnet.cmake  yaml_cpp.cmake
cmake/template/: config.h.in
config/: custom_rosconsole.conf  eval.txt  gantry.yaml  general.yaml  image_view.yaml  leopard.txt  proto.txt  proto.txt-0412  proto.txt-2018-04-12-14-07-10  proto.txt-2018-07-12-16-55-21  proto.txt-raw-image  proto.txt-tpyaq  proto.txt-tusimple
include/lane_line/: CubicCurve.h  Curve.h  CurveFitting.h  DateTime.h  DistTransNarrowing.h  Drawing.h  Evaluation.h  FileSystem.h  FilterLines.h  GantryLaneDetector.h  IPMParameters.h  IPMTransformation.h  KalmanLineFilter.h  LaneLineDetector.h  Line.h  MergeLines.h  Narrowing.h  Point.h  PointsExtraction.h  Preprocessing.h  QuadraticCurve.h  RemoveLines.h  RowScanNarrowing.h  SegnetPreprocessing.h  Spline.h  Transformation.h  common.h  protobuf_util.h  visualization.h
launch/: gantry.launch  general.launch  image_view.launch  lane_line.launch
lib-arm/: readme.md
models/: _iter_60000.caffemodel  add_bias_result_lite.caffemodel  add_bias_result_lite.prototxt  after_bn_calc2.caffemodel  deploy.prototxt  deploy_three_class.prototxt
proto/: CMakeLists.txt  lane_line.proto
scripts/: ipm_calibration.sh
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  CubicCurve.cpp  Curve.cpp  CurveFitting.cpp  DateTime.cpp  DistTransNarrowing.cpp  Drawing.cpp  Evaluation.cpp  FileSystem.cpp  FilterLines.cpp  GantryLaneDetector.cpp  IPMParameters.cpp  IPMTransformation.cpp  KalmanLineFilter.cpp  LaneLineDetector.cpp  Line.cpp  MergeLines.cpp  Narrowing.cpp  Point.cpp  PointsExtraction.cpp  Preprocessing.cpp  QuadraticCurve.cpp  RemoveLines.cpp  RowScanNarrowing.cpp  SegnetPreprocessing.cpp  Spline.cpp  Transformation.cpp  protobuf_util.cpp  tools.cpp  visualization.cpp
src/gantry/: CMakeLists.txt  gantry_main.cpp  ros_node.cpp
src/normal/: CMakeLists.txt  general_main.cpp  ros_node.cpp
src/tools/: CMakeLists.txt  IpmToolExecutable.cpp  draw_detected_lines_node.cpp  image_publisher.cpp  image_view.cpp
test/: CMakeLists.txt  CubicCurve.cpp  Curve.cpp  CurveFitting.cpp  DateTime.cpp  Drawing.cpp  Evaluation.cpp  FileSystem.cpp  IPMParameters.cpp  IPMTransformation.cpp  Line.cpp  MergeLines.cpp  Narrowing.cpp  Point.cpp  PointsExtraction.cpp  Preprocessing.cpp  QuadraticCurve.cpp  RemoveLines.cpp  Spline.cpp  Transformation.cpp  compare_ipm_raw_cnn.cpp  compute_eval_metrics.cpp  protobuf.cpp  raw_image_test.cpp  segnet.cpp  test_cnn_caffe_main.cpp  test_common.cpp  test_common.h  test_main.cpp
test/data/: 0054.txt  1-ipm.txt  11.txt
test/data/eval/: 2018-07-12-16-55-21-a.txt
test/eval/: CMakeLists.txt  extract-ground-truth-single-image-test.cpp  ipm_parameters_compare.cpp
tools/: computer_perspective_trans_ros.py  readme
